Add rubocop to github actions

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -3,18 +3,35 @@ name: Ruby
 on: [push]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby 2.6
       uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.6.x
-    - name: Build and test with Rake
+    - name: Build
+      if: steps.cache.outputs.cache-hit != 'true'
       run: |
         gem install bundler
+        bundle config path vendor/bundle
         bundle install --jobs 4 --retry 3
-        bundle exec rspec
+    - name: Lint
+      run: bundle exec rubocop
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Ruby 2.6
+      uses: actions/setup-ruby@v1
+      with:
+        ruby-version: 2.6.x
+    - name: Build
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: |
+        gem install bundler
+        bundle config path vendor/bundle
+        bundle install --jobs 4 --retry 3
+    - name: Test
+      run: bundle exec rspec
