--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,3 +16,7 @@ Style/HashTransformKeys:
 Style/HashTransformValues:
   Enabled: true
 
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*_spec.rb'
+
